change to css and text

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -96,6 +96,9 @@ p#intro{
   width:20%;
   margin-right: 2%;
 
+  margin-top: 4%;
+  margin-bottom: 3%;
+
 }
 #selectedCou{
     font: 36px Caecilia LT Std;
