--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -359,9 +359,13 @@ p#intro{
   .axis.parallel .title {
     font-size: 16px;
     font-weight: bold;
-    text-transform: uppercase;
+    /**text-transform: uppercase;**/
   }
 
+ .axis.parallel .nbrUsers1,.axis.parallel .nbrUsers2,.axis.parallel .nbrUsers3,.axis.parallel .nbrUsers4,.axis.parallel .nbrUsers5, .axis.parallel .nbrUsers6{
+    font-size: 12px;
+    font-style: italic;
+  }
   .axis.parallel line,
   .axis.parallel path {
     fill: none;
